# KMER_WORKFLOW

./: .gitignore  LICENCE  README.md  README.rst  Snakefile  cluster_config_SLURM.yaml  pyproject.toml  run_workflow.sh
Kmerworkflow/: __init__.py  global_variables.py  main.py  module.py
Kmerworkflow/install_files/: access_list.txt  cluster_config_SLURM.yaml  config.yaml  tools_path.yaml
Kmerworkflow/snakefiles/: Snakefile
Kmerworkflow/snakemake_scripts/: GraphKmer_v3.pl  count_occurence_intersections.py  count_reads.py
config/: config.yaml
docs/: requirements.txt
docs/source/: ABOUT.rst  INSTALL.rst  PROJECT.rst  WORKFLOWS.rst  click.rst  conf.py  index.rst
scripts/: GraphKmer_v2.pl  GraphKmer_v3.pl  count_occurence_intersections.py  merge_table.py  name_columns.py  subset_kmer.py
scripts/createIndexMem-VERSION-NICO/: ChangeLog  Makefile  README.md  combinaisons.py  createIndexMem-VERSION-NICO  createIndexMem-VERSION-NICO.c  createIndexMem_0-1  createIndexMem_0-1.c  dna.h  imageByPrefix.c  kstring.c
