[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=6.2"
]


[tool.setuptools_scm]
write_to = "Kmerworkflow/_version.py"
version_scheme="release-branch-semver"
tag_regex="^(\\d.\\d.\\d)-*\\w*\\d*$"
local_scheme = "no-local-version"

[project]
name = "Kmerworkflow"
dynamic = ["version"]
description = "Kmer_Workflow is a snakemake pipeline showing shared KMERS for different individuals "
authors = [
    {name = "Durand Théo (CIRAD)",email = "theo.durand@cirad.fr"},
]
dependencies = ["PyYAML", "click>=8.0.3", "cookiecutter", "docutils", "python-gitlab", "snakemake", "tqdm"]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["snakemake", "KMER", "workflow"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "License :: Free for non-commercial use",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/thdurand4/KMER_WORKFLOW"
"Bug Tracker" = "https://github.com/thdurand4/KMER_WORKFLOW/issues"
Documentation = "https://workflow_kmer.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/thdurand4/KMER_WORKFLOW"

[project.optional-dependencies]
dev = [
    "sphinx_click",
    "sphinx_copybutton",
    "sphinx_rtd_theme",
    "tox",
]

[project.scripts]
count_occurence_intersections = "Kmerworkflow.scripts.count_occurence_intersections:main"
count_read = "Kmerworkflow.scripts.count_reads:main"
graph_kmer = "Kmerworkflow.scripts.GraphKmer_v3:main"

[project.entry-points.Kmerworkflow]
Kmerworkflow = "__init__"

[tool.sphinx]
source-dir = "docs/source"
build-dir = "docs/build"
config-dir = "docs/source"
